@@ -633,8 +633,8 @@ public class HtmlAnchorTest extends WebDriverTestCase {
     @Test
     @Alerts({"§§URL§§bug.html?h%C3%B6=G%C3%BCnter", "h\u00F6", "G\u00FCnter"})
     public void encoding() throws Exception {
-        final String href = "bug.html?" + URLEncoder.encode("h\u00F6", "UTF-8")
-                + '=' + URLEncoder.encode("G\u00FCnter", "UTF-8");
+        final String href = "bug.html?" + URLEncoder.encode("h\u00F6", UTF_8)
+                + '=' + URLEncoder.encode("G\u00FCnter", UTF_8);
         final String html = DOCTYPE_HTML
             + "<html>\n"
             + "<head>\n"
@@ -765,12 +765,12 @@ public class HtmlAnchorTest extends WebDriverTestCase {
 
         expandExpectedAlertsVariables(URL_FIRST);
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -794,12 +794,12 @@ public class HtmlAnchorTest extends WebDriverTestCase {
             + "<body></body>\n"
             + "</html>";
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -823,12 +823,12 @@ public class HtmlAnchorTest extends WebDriverTestCase {
             + "<body></body>\n"
             + "</html>";
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         driver.findElement(By.id("link")).click();
 
         assertEquals(2, getMockWebConnection().getRequestCount());
@@ -856,12 +856,12 @@ public class HtmlAnchorTest extends WebDriverTestCase {
 
         expandExpectedAlertsVariables(URL_FIRST);
 
-        final URL indexUrl = new URL(URL_FIRST.toString() + "index.html");
+        final URL indexUrl = new URL(URL_FIRST + "index.html");
 
         getMockWebConnection().setResponse(indexUrl, firstContent);
         getMockWebConnection().setResponse(URL_SECOND, secondContent);
 
-        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST.toString() + "index.html?test#ref"));
+        final WebDriver driver = loadPage2(firstContent, new URL(URL_FIRST + "index.html?test#ref"));
         new Actions(driver)
                 .keyDown(Keys.CONTROL)
                 .click(driver.findElement(By.id("link")))
